atualização icon head

--- a/contato.html
+++ b/contato.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/classes.css">
     <link rel="stylesheet" href="assets/css/menu.css">
     <link rel="stylesheet" href="assets/css/elements.css">
+    <link rel="icon" href="assets/img/Logotipo-Way-Final.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/variaveis.css">
     <script type="module" src="assets/components/header.js"></script>
     <script type="module" src="assets/components/footer.js"></script>
