atualização icon header

--- a/contato.html
+++ b/contato.html
@@ -15,10 +15,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
+    <link rel="icon" href="assets/img/Logotipo-Way-Final.png" type="image/x-icon" sizes="52x52">
     <link rel="stylesheet" href="assets/css/classes.css">
     <link rel="stylesheet" href="assets/css/menu.css">
-    <link rel="stylesheet" href="assets/css/elements.css">
-    <link rel="icon" href="assets/img/Logotipo-Way-Final.png" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/elements.css">>
     <link rel="stylesheet" href="assets/css/variaveis.css">
     <script type="module" src="assets/components/header.js"></script>
     <script type="module" src="assets/components/footer.js"></script>
@@ -93,7 +93,7 @@
                             <label>
                                 Mensagem
                             </label>
-                            <textarea name="$Mensagem" id="message" cols="30" rows="10" placeholder="Your message"
+                            <textarea name="$Mensagem" id="message" cols="30" rows="10" placeholder="Sua mensagem"
                                 required></textarea>
                             <!-- Corrigido o ID para message -->
                         </div>
@@ -104,7 +104,7 @@
                         </div>
                     </fieldset>
                 </div>
-            </form>                     
+            </form>
     </main>
     <footer-component></footer-component>
     <a class="back-to-top" href="#">➤</a>
