--- a/localização.html
+++ b/localização.html
@@ -15,7 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="icon" href="assets/img/Logotipo-Way-Final.png" type="image/x-icon">
+        <link rel="icon" href="assets/img/Logotipo-Way-Final.png" type="image/x-icon" sizes="52x52">
     <link rel="stylesheet" href="assets/css/classes.css">
     <link rel="stylesheet" href="assets/css/menu.css">
     <link rel="stylesheet" href="assets/css/elements.css">
