adicionando página de formulário para funcionários

--- a/contato.html
+++ b/contato.html
@@ -60,7 +60,7 @@
             <form id="contact-form" action="https://api.staticforms.xyz/submit" method="post">
                 <div class="contact-form">
                     <fieldset class="form-grid">
-                        <input type="hidden" name="redirectTo" value="https://way-ulltima-milha.netlify.app">
+                        <input type="hidden" name="redirectTo" value="https://wayultimamilha.com.br/">
                         <input type="hidden" name="accessKey" value="84bb621b-5db3-45c3-95ca-0c4aa116848b">
                         <input type="text" name="honeypot" style="display: none;">
                         <legend>Nos envie um e-mail</legend>
