--- a/servicos.html
+++ b/servicos.html
@@ -35,6 +35,12 @@
     <main>
         <section id="gallery" class="grid-one main-bg section">
             <div class="main-content grid-one-content">
+                <div class="trabalhe">
+                    <h1 class="text-index"> Trabalhe com a gente</h1>
+                    <p>É motorista ? acesse o link e se inscreva em serviços freelancer na cidade de são paulo</p>
+                    <a href="trabalheComAGente.html">Inscreva-se</a>
+                </div>
+
                 <h2 class="text-index">Serviços oferecidos</h2>
                 <h2 class="text-h2">FROTA E LOGÍSTICA SEGURA</h2>
                 <p class="grid-description">A Way Última Milha oferece uma frota diversificada de veículos de pequeno,
