--- a/trabalheComAGente.html
+++ b/trabalheComAGente.html
@@ -67,7 +67,7 @@
               <input type="text" name="honeypot" style="display: none" />
               <legend>Trabalhe com a gente</legend>
               <div class="Opcao_mei">
-                <label class=""> Tem mei ? 
+                <label class=""> Tem MEI ? 
                     <input type="radio" name="$Tem_Mei" id="Mei_Sim" value="Sim" />
                     <label for="Mei_Sim">Sim</label>
                     <input type="radio" name="$Tem_Mei" id="Mei_Nao" value="Não" />
