--- a/servicos.html
+++ b/servicos.html
@@ -37,7 +37,8 @@
             <div class="main-content grid-one-content">
                 <div class="trabalhe">
                     <h1 class="text-index"> Trabalhe com a gente</h1>
-                    <p>Estamos agregando acesse o link e se inscreva em serviços freelancer na cidade de são paulo</p>
+                    <img class="banner-agregando" src="assets/img/Agregando.jpg">
+                    <p>acesse o link e se inscreva em serviços freelancer na cidade de são paulo</p>
                     <a href="trabalheComAGente.html">Inscreva-se</a>
                 </div>
 
