--- a/trabalheComAGente.html
+++ b/trabalheComAGente.html
@@ -141,7 +141,7 @@
                   required
                 />
              
-              <div class="gid-form-trabalho">
+              <div class="gid-form-trabalho ">
                 <div>
                     <label for="first-name"> Bairro </label>
                     <input
@@ -219,5 +219,6 @@
     </main>
     <footer-component></footer-component>
     <a class="back-to-top" href="#">➤</a>
+    <script src="assets/js/trabalheForm.js"></script>
   </body>
 </html>
