correção btn logo

--- a/trabalheComAGente.html
+++ b/trabalheComAGente.html
@@ -72,27 +72,27 @@
               <div class="Opcao_localidades">
                 <label>Qual a localidade de interesse?</label>
                 <div class="opcao">
-                    <input type="radio" name="$localidade de interesse" id="sao_paulo" value="São Paulo" required>
+                    <input type="radio" name="$Localidade de interesse:" id="sao_paulo" value="São Paulo" required>
                     <label for="sao_paulo">São Paulo</label>
                 </div>
                 <div class="opcao">
-                    <input type="radio" name="$localidade de interesse" id="campinas" value="Campinas">
+                    <input type="radio" name="$Localidade de interesse:" id="campinas" value="Campinas">
                     <label for="campinas">Campinas</label>
                 </div>
                 <div class="opcao">
-                    <input type="radio" name="$localidade de interesse" id="sorocaba" value="Sorocaba">
+                    <input type="radio" name="$Localidade de interesse:" id="sorocaba" value="Sorocaba">
                     <label for="sorocaba">Sorocaba</label>
                 </div>
                 <div class="opcao">
-                    <input type="radio" name="$localidade de interesse" id="litoral" value="Litoral">
+                    <input type="radio" name="$Localidade de interesse:" id="litoral" value="Litoral">
                     <label for="litoral">Litoral</label>
                 </div>
             </div>
               <div class="Opcao_mei">
                 <label class=""> Tem MEI ? 
-                    <input type="radio" name="$MEI" id="Mei_Sim" value="Sim" required />
+                    <input type="radio" name="$MEI:" id="Mei_Sim" value="Sim" required />
                     <label for="Mei_Sim">Sim</label>
-                    <input type="radio" name="$MEI" id="Mei_Nao" value="Não" />
+                    <input type="radio" name="$MEI:" id="Mei_Nao" value="Não" />
                     <label for="Mei_Nao">Não</label>
                 </label>
               </div>
@@ -100,7 +100,7 @@
                 <label for="cnpj">CNPJ ou CPF </label>
                 <input
                   type="text"
-                  name="$CNPJ ou CPF"
+                  name="$CNPJ ou CPF:"
                   id="cnpj"
                   placeholder="Informe o CNPJ"
                   maxlength="14"
@@ -112,7 +112,7 @@
                 <label for="first-name"> Nome completo </label>
                 <input
                   type="text"
-                  name="$Nome"
+                  name="$Nome:"
                   id="first-name"
                   placeholder="Seu nome"
                   required
@@ -123,7 +123,7 @@
                 <label class="full-width"> Telefone </label>
                 <input
                   type="tel"
-                  name="$Telefone"
+                  name="$Telefone:"
                   for
                   placeholder="Seu numero"
                   maxlength="13"
@@ -135,7 +135,7 @@
                 <label for="Endereço">Endereço</label>
                 <input
                   type="text"
-                  name="$Endereço"
+                  name="$Endereço:"
                   id="Endereço"
                   placeholder="Seu endereço"
                   required
@@ -146,7 +146,7 @@
                     <label for="first-name"> Bairro </label>
                     <input
                       type="text"
-                      name="$Bairro"
+                      name="$Bairro:"
                       id="Bairro"
                       placeholder="Seu Bairro"
                       required
@@ -156,7 +156,7 @@
                     <label for="first-name">Cidade</label>
                     <input
                       type="text"
-                      name="$Cidade"
+                      name="$Cidade:"
                       id="first-name"
                       placeholder="Sua cidade"
                       required
@@ -169,26 +169,26 @@
                     <label for="fiorino">
                         <img class="carro-img" src="assets/img/van.png" alt="Fiorino"> Fiorino
                     </label>
-                    <input type="radio" name="$modelo do carro:" id="fiorino" value="Fiorino" required>
+                    <input type="radio" name="$Modelo do carro:" id="fiorino" value="Fiorino" required>
                 </div>
                 <div class="opcao">
                     <label for="van">
                         <img class="carro-img" src="assets/img/v.png" alt="Van"> Van
                     </label>
-                    <input type="radio" name="$modelo do carro:" id="van" value="Van">
+                    <input type="radio" name="$Modelo do carro:" id="van" value="Van">
                 </div>
                 <div class="opcao">
                     <label for="tres_quartos_bau">
                         <img class="carro-img" src="assets/img/Bau 34.jpeg" alt="3/4 Baú"> 3/4 Baú
                     </label>
-                    <input type="radio" name="$modelo do carro:" id="tres_quartos_bau" value="3/4 Baú">
+                    <input type="radio" name="$Modelo do carro:" id="tres_quartos_bau" value="3/4 Baú">
                 </div>
                 <div class="opcao">
                     
                     <label for="toco_bau">
                         <img class="carro-img" src="assets/img/toco_bau.jpeg" alt="Toco Baú"> Toco Baú
                     </label>
-                    <input type="radio" name="$modelo do carro:" id="toco_bau" value="Toco Baú">
+                    <input type="radio" name="$Modelo do carro:" id="toco_bau" value="Toco Baú">
                 </div>
                 <div class="opcao">
                     
