--- a/servicos.html
+++ b/servicos.html
@@ -38,8 +38,8 @@
                 <div class="trabalhe">
                     <h1 class="text-index"> Trabalhe com a gente</h1>
                     <img class="banner-agregando" src="assets/img/Agregando.jpg">
-                    <p>acesse o link e se inscreva em serviços freelancer na cidade de são paulo</p>
-                    <a href="trabalheComAGente.html">Inscreva-se</a>
+                    <p>acesse o link ⬇️ e se inscreva em serviços freelancer na cidade de são paulo</p>
+                    <a class="button-agregando" href="trabalheComAGente.html">Inscreva-se</a>
                 </div>
 
                 <h2 class="text-index">Serviços oferecidos</h2>
